[build-system]
requires = [
    cycler==0.11.0
    EoN==1.1
    fonttools==4.28.5
    kiwisolver==1.3.2
    matplotlib==3.5.1
    networkx==2.6.3
    numpy==1.21.5
    packaging==21.3
    Pillow==8.4.0
    pycodestyle==2.8.0
    pyparsing==3.0.6
    python-dateutil==2.8.2
    scipy==1.7.3
    six==1.16.0

]
build-backend = "setuptools.build_meta"