[metadata]
name = VisAST
version = 0.1.0
author = Jesse Phillips
author_email = james@jamesphillipsuk.com
description = Building and visualising Abstract Syntax Trees for Python code.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JamesPhillipsUK/vast
project_urls =
    Bug Tracker = https://github.com/JamesPhillipsUK/vast/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
python_requires = >=3.9

install_requires =
    networkx
    EoN
    matplotlib

package_dir =
    = src
packages = find:

[options.packages.find]
where = src